--- a/src/components/portfolioHighlights.astro
+++ b/src/components/portfolioHighlights.astro
@@ -32,7 +32,7 @@ highlights.forEach(name => {
 <!-- Portfolio highlights component -->
 <SiteGridContent classItems="portfolio wrap">
     {
-        items.map((item, i2) => {
+        items.map(async (item, i2) => {
             var target = '_blank'
             var url = item.frontmatter.url
             if (url.startsWith('//')) url = `https:${url}`
@@ -54,7 +54,7 @@ highlights.forEach(name => {
                     <img src={image_url} alt={`Screenshot of ${item.frontmatter.name} project`} alt="" class="item__img" style={`--placeholder: url('${image_url}&image_quality=${50}')`} />
                     <div class="item__info">
                         <h3 class="item__title">{item.frontmatter.name}</h3>
-                        <p class="item__content">{sanitizeMD(item.rawContent())}</p>
+                        <p class="item__content">{sanitizeMD(await item.rawContent())}</p>
                     </div>
                 </a>
             )
