--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -63,7 +63,7 @@ const visiblePortfolioItems = filterVisibleItems(allPortfolioItems)
 <Layout title="Portfolio">
     <SiteGridContent classItems="portfolio wrap">
         {
-            visiblePortfolioItems.map((item, itemIndex) => {
+            visiblePortfolioItems.map(async (item, itemIndex) => {
                 const portfolioName = getFName(item.file)
                 const portfolioUrl = item.frontmatter.url
                 const linkTarget = determineLinkTarget(portfolioUrl, Astro.site)
@@ -80,7 +80,7 @@ const visiblePortfolioItems = filterVisibleItems(allPortfolioItems)
                         />
                         <div class="item__info">
                             <h3 class="item__title">{item.frontmatter.name}</h3>
-                            <p class="item__content">{sanitizeMD(item.rawContent())}</p>
+                            <p class="item__content">{sanitizeMD(await item.rawContent())}</p>
                         </div>
                     </a>
                 )
