--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -77,9 +77,7 @@ const randomId = nanoid()
         >
             {formFields.name.label}
         </Input>
-        
-        <!-- <input hidden type="text" name="FromFull" id="from" /> -->
-        
+                
         <Input 
             type={formFields.email.type as HTMLInputTypeAttribute} 
             name={formFields.email.name} 
@@ -106,6 +104,13 @@ const randomId = nanoid()
             name="entry.1290678673" 
             id="email-subject" 
             value="Contact Form Submission" 
+        />
+        
+        <Input 
+            type="hidden" 
+            name="entry.352902831" 
+            id="email-subject" 
+            value={randomId} 
         />
         
         <Input 
@@ -177,7 +182,6 @@ const randomId = nanoid()
         const dateString = `${year}-${month}-${day}+${hours}:${minutes}`
         
         formData.append('entry.1741855386', dateString)
-        formData.append('entry.352902831', randomId)
         
         // Submit form data to the endpoint using hidden iframe
         console.log('Submitting form to:', form.action)
