--- a/src/styles/components/defaultInputs.scss
+++ b/src/styles/components/defaultInputs.scss
@@ -52,6 +52,10 @@ $pad: 1rem;
     
     &:is(textarea) {
         resize: vertical;
+        @supports (field-sizing: content) {
+            field-sizing: content;
+            resize: none;
+        }
     }
 }
 
