--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -139,7 +139,7 @@ const keywords = keywordsArray.join(', ')
         <!-- <script type="text/javascript">
             var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
             (function(){
-                var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+                var s1=document.createElement('script'),s0=document.getElementsByTagName('script')[0];
                 s1.async=true;
                 s1.src='https://embed.tawk.to/613695e4d6e7610a49b3f5bc/1feujj12b';
                 s1.charset='UTF-8';
