--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -14,7 +14,7 @@ const musicConfig: MusicPlaylistConfig = {
         'https://embed.music.apple.com/us/playlist/daytime-hits-s/pl.u-06oxpo6tY48JWV7', 
         'https://embed.music.apple.com/us/playlist/rise-shine-s/pl.u-MDAWkl9tANVeW83', 
     ],
-    channelId: "UCHUWd3IuPu3P21XkDW8vSuQ",
+    channelId: 'UCHUWd3IuPu3P21XkDW8vSuQ',
     videosPerChannel: 3
 }
 
